--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>Hello Thunk</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+        <span id="userinfo"></span>
+        <button id="getuser">Get user</button>
+    </div>
     <script src="./app.js"></script>
   </body>
 </html>
